# Specify our source files
set(CBindingsStaticTest_SOURCES
    "main.c"
)

# Define our project targets
add_executable(CBindingsStaticTest ${CBindingsStaticTest_SOURCES} ${COBALT_VERSION_FILES})
register_clang_format_and_tidy_target(CBindingsStaticTest)
cobalt_apply_compiler_warning_settings(CBindingsStaticTest)
add_rpath(CBindingsStaticTest ".")

# Set custom compilation/linker settings
if(WIN32)
    target_compile_definitions(CBindingsStaticTest PRIVATE _CRT_SECURE_NO_WARNINGS)
endif()

# Specify our project dependencies
target_link_libraries(CBindingsStaticTest
    PRIVATE
        Cobalt::CobaltCBindingsStatic
        Cobalt::VulkanRenderer
        png_static
)

# Transfer required files to their output locations
set(STATIC_TARGET_INSTALL_DIR "${COBALT_OUTPUT_ROOT}/CBindingsStaticTest_${COBALT_ARCH}_$<CONFIG>")
cobalt_install_with_deps(CBindingsStaticTest "${COBALT_OUTPUT_ROOT}/CBindingsStaticTest_${COBALT_ARCH}_$<CONFIG>")
if(APPLE)
    # Set paths to the Vulkan loader and MoltenVK target files from the SDK
    set(VULKAN_LOADER_DYLIB "${COBALT_MACOS_VULKAN_SDK_INSTALL_PATH}/lib/libvulkan.1.dylib")
    set(MOLTENVK_DYLIB "${COBALT_MACOS_VULKAN_SDK_INSTALL_PATH}/lib/libMoltenVK.dylib")
    set(MOLTENVK_ICD_JSON "${COBALT_MACOS_VULKAN_SDK_INSTALL_PATH}/share/vulkan/icd.d/MoltenVK_icd.json")
    set(VULKAN_LAYER_DIR "${COBALT_MACOS_VULKAN_SDK_INSTALL_PATH}/share/vulkan/explicit_layer.d")

    # The json files contain relative paths to targets, so we patch them here to account for the target files being
    # directly next to them in the same directory in our distribution.
    function(cobalt_patch_vulkan_json input_file output_file)
        file(READ "${input_file}" contents)
        string(REGEX REPLACE "\"library_path\"[ \t]*:[ \t]*\"[^\"]*/([^/\"]+)\"" "\"library_path\": \"\\1\"" contents "${contents}")
        file(WRITE "${output_file}" "${contents}")
    endfunction()
    set(VULKAN_STAGING_DIR "${CMAKE_BINARY_DIR}/generated/vulkanForCBindingsStaticTest")
    file(MAKE_DIRECTORY "${VULKAN_STAGING_DIR}")
    set(PATCHED_MOLTENVK_ICD_JSON "${VULKAN_STAGING_DIR}/MoltenVK_icd.json")
    cobalt_patch_vulkan_json("${MOLTENVK_ICD_JSON}" "${PATCHED_MOLTENVK_ICD_JSON}")

    # The libvulcan.1.dylib file is a symlink on disk, so we resolve it here down to an actual file.
    file(REAL_PATH "${VULKAN_LOADER_DYLIB}" VULKAN_LOADER_DYLIB_REAL)
    configure_file("${VULKAN_LOADER_DYLIB_REAL}" "${VULKAN_STAGING_DIR}/libvulkan.1.dylib" COPYONLY)

    # Copy all the files we need to get a self-contained Vulkan loader with MoltenVK for macOS
    cobalt_install_generated_bin("${VULKAN_STAGING_DIR}/libvulkan.1.dylib" "${STATIC_TARGET_INSTALL_DIR}")
    cobalt_install_generated_bin("${MOLTENVK_DYLIB}" "${STATIC_TARGET_INSTALL_DIR}")
    cobalt_install_generated_bin("${PATCHED_MOLTENVK_ICD_JSON}" "${STATIC_TARGET_INSTALL_DIR}")
endif()

# Define our virtual project folder and file structure
set_target_properties(CBindingsStaticTest PROPERTIES FOLDER "Testing")
source_group(TREE "${CMAKE_CURRENT_SOURCE_DIR}" FILES ${CBindingsTest_SOURCES})
make_paths_relative(COBALT_VERSION_FILES_RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} ${COBALT_VERSION_FILES})
source_group("Autogenerated" FILES ${COBALT_VERSION_FILES_RELATIVE})
